<resources>
    <string name="app_name">巴士天气</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="future_ten_days_weather_prediction">未来10日天气预报</string>
    <string name="date">·日&#x3000;&#x3000;期:</string>
    <string name="dayTime">·白天天气:</string>
    <string name="night">·夜晚天气:</string>
    <string name="temperature">·全天气温:</string>
    <string name="week">·星&#160;&#160;期&#160;&#160;几:</string>
    <string name="wind">·风向风力:</string>
    <string name="please_choose_area">·请选择查询地区·</string>
    <string name="sure">确&#x3000;定</string>
</resources>
